# analytics

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
backend/es_initer/: Dockerfile
backend/es_initer/src/: client.py
backend/es_initer/src/config/: base.py  logger.py
backend/feedbacks/: Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
backend/feedbacks/modules/auth/src/: decorators.py
backend/feedbacks/modules/auth/src/payloads/: fastapi.py
backend/feedbacks/modules/auth/src/services/access/: grpc.py
backend/feedbacks/src/: factory.py  main.py
backend/feedbacks/src/api/v1/: bookmarks.py  likes.py  params.py  reviews.py  utilitys.py
backend/feedbacks/src/core/: config.py  logger.py  settings.py
backend/feedbacks/src/db/: redis.py
backend/feedbacks/src/db/mongodb/: create_collections.py  mongodb.py
backend/feedbacks/src/db/mongodb/commands/: commands_utility.py  create_collections.json  create_indexes.json
backend/feedbacks/src/models/: base.py  bookmarks.py  like.py  review.py
backend/feedbacks/src/services/: base.py  bookmark.py  like.py  review.py
backend/feedbacks/src/tests/functional/: conftest.py
backend/feedbacks/src/tests/functional/src/: test_bookmarks.py  test_likes.py  test_reviews.py
backend/feedbacks/src/tests/functional/testdata/fixtures/: requests.py
backend/feedbacks/src/utility/: utility.py
backend/filebeat/config/: filebeat.yml
backend/logstash/config/: logstash.yml  pipelines.yml
backend/logstash/config/pipelines/: nginx.conf  nginx_pipeline.conf
backend/nginx/configs/: feedbacks.conf  kibana.conf
backend/nginx/static/log/: access_log  error_log
db_research/: readme.md
db_research/mongo/src/: benchmarks.py  create_collections.py  load_data.py
db_research/mongo/src/adapters/: base.py
db_research/mongo/src/adapters/mongo/: client.py
db_research/mongo/src/commands/: benchmarks_commands.json  commands_utility.py  create_collections.json  create_indexes.json
db_research/mongo/src/core/: settings.py
db_research/mongo/src/data_generator/: data_generator.py
db_research/mongo/src/data_loader/: data_loader.py
db_research/mongo/src/utility/: utility.py
log_hub/es_initer/: Dockerfile  requirements.txt
log_hub/es_initer/src/: client.py  main.py  security_client.py
log_hub/es_initer/src/config/: base.py  logger.py
log_hub/filebeat/config/: filebeat.yml
log_hub/kibana/config/: kibana.yml
log_hub/logstash/: Dockerfile
log_hub/logstash/config/pipelines/: es_initer.conf  feedbacks.conf
