[tool.poetry]
name = "async_api_sprint_1"
version = "0.1.0"
description = ""
authors = ["Kariyma <mariika-sun@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "2.0.1"
fastapi = "0.85.0"
orjson = "3.8.0"
uvicorn = "0.18.3"
uvloop = "0.17.0"
pydantic-env = "0.2.0"
python-dotenv = "0.21.0"
unicorn = {extras = ["standart"], version = "2.0.0"}
gunicorn = "20.1.0"
backoff = "2.2.1"
aiohttp = "3.8.3"
fastapi-jwt-auth = "0.5.0"
pymongo = "4.3.3"
pydantic = {extras = ["dotenv"], version = "1.10.2"}
motor = "3.1.1"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
